--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
 
+{
+  "name": "fnBoard",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+  "start": "node server.js"
+},
+
+  "dependencies": {
+   "socket.io": "0.9.x"
+},
+   "engines": {
+     "node": "0.10.x",
+     "npm": "1.3.x"
+   }
+}
