--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 
 {
-  "name": "fnBoard",
+  "name": "barley-break-html5",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
   "start": "node server.js"
-},
-
-  "dependencies": {
-   "socket.io": "0.9.x"
-},
-   "engines": {
-     "node": "0.10.x",
-     "npm": "1.3.x"
-   }
 }
